--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
+    "framer-motion": "^7.6.1",
+    "i18next": "^22.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.0.0",
+    "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
