--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "homepage": "https://nazagutierrez.github.io/portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@justinribeiro/lite-youtube": "^1.8.1",
+    "@tailwindcss/vite": "^4.1.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.11.3",
     "framer-motion": "^7.6.1",
     "gh-pages": "^4.0.0",
+    "gsap": "^3.13.0",
     "i18next": "^22.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "tailwindcss": "^4.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -27,8 +30,6 @@
     "deploy": "gh-pages -d build",
     "start": "vite",
     "build": "vite build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "dev": "vite"
   },
   "eslintConfig": {
@@ -51,6 +52,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.1.0"
+    "vite": "^6.3.5"
   }
 }
